# elevenlabs-n8n

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  _clean_all_es.ps1  _clean_module1.ps1  _delete_es_pptx.ps1  _list_es_pptx.ps1  _list_work.ps1  _list_work2.ps1  assemble_es_video.py  assemble_slide_video.py  assemble_videos.py  check_pptx.ps1  detect_timing.py  export_slides.ps1  export_slides_temp.ps1  find_videos.ps1  generate_es_timing.py  pyproject.toml  run_batch.py  run_batch.sh  translate_pptx.py
src/video_translator/: __init__.py  assemble.py  audio_extract.py  cli.py  config.py  models.py  review.py  synthesize.py  transcribe.py  translate.py
